Eliminar deadline
